# pkillr

./: Cargo.toml
crates/pkillr/: Cargo.toml
crates/pkillr/src/: app.rs  config.rs  main.rs  process.rs  signals.rs
crates/pkillr/src/ui/: aux_views.rs  info_pane.rs  mod.rs  signal_menu.rs  table.rs  tree_view.rs
