[package]
name = "pkillr"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
nix = { version = "0.28", features = ["signal", "user"] }
fuzzy-matcher = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"
regex = "1.10"
